--- a/changelog.txt
+++ b/changelog.txt
@@ -1,3 +1,3 @@
-v1.0.2 -
+v1.0.2 - adding 2 decimal places
 v1.0.1 - adding website
 v1.0.0 - inital setup logging KWH, cost per bulb, total cost, saving to file
